fix scrollbar to display only when lists overflowing

--- a/src/style.css
+++ b/src/style.css
@@ -128,8 +128,7 @@ nav .lists {
 
 nav .list-items {
   max-height: 195px;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-y: auto;
   list-style-type: none;
 }
 
@@ -248,6 +247,7 @@ nav .lists .create-list-item:active {
   background-color: #ccc;
 }
 
+
 .current-screen .todo-items {
   list-style-type: none;
   display: grid;
@@ -276,8 +276,9 @@ nav .lists .create-list-item:active {
 }
 
 .todo-item[data-priority="none"] {
-  border-right: none;
+  border-right: solid;
   border-radius: 9px;
+  border-right-color: #eee;
 }
 
 .todo-item .marker-label-container {
